<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.defensivethinking.co.za.smartcitizen.CaptureReadingActivity"
    >


<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.1"
        android:text="@string/property_form_heading"
        android:textColor="@color/accent"
        android:gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line_separator"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:background="@color/accent"
        android:layout_marginTop="5dp"/>

           <TextView
            android:id="@+id/property_portion_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/portion_text"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            />

        <EditText
            android:id="@+id/property_portion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.08"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/smart_citizen_text_color"/>

        <TextView
            android:id="@+id/property_account_no_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/account_no_text"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            />

        <EditText
            android:id="@+id/property_account_no"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.08"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/smart_citizen_text_color"
            android:inputType="number"/>


        <TextView
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/address_text"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"/>

        <EditText
            android:id="@+id/property_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/smart_citizen_text_color"/>


        <TextView
            android:id="@+id/bp_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/bp_text"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/property_bp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/smart_citizen_text_color"/>

        <TextView
            android:id="@+id/contact_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/contact_text"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"/>

        <EditText
            android:id="@+id/property_contact"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/smart_citizen_text_color"/>

        <TextView
            android:id="@+id/property_initials_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/initials"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"/>

        <EditText
            android:id="@+id/property_initials"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/smart_citizen_text_color"/>

    <TextView
        android:id="@+id/property_surname_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/surname_text"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"/>

    <EditText
        android:id="@+id/property_surname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/smart_citizen_text_color"/>

    <Button
        android:id="@+id/submit_property"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/submit_property"
        android:textColor="@color/white"
        android:background="@color/light_blue_600"
        android:layout_marginBottom="5dp"

        android:layout_marginTop="5dp"/>
</LinearLayout>

</ScrollView>
