
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="app.defensivethinking.co.za.smartcitizen.CaptureReadingActivity"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no_properties"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/accent"
                />

            <LinearLayout
                android:id="@+id/capture_reading_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:weightSum="1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/error_message"
                        android:gravity="center_vertical"
                        android:visibility="invisible"/>

                    <ProgressBar
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:id="@+id/progressBar"
                        android:visibility="invisible"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:text="@string/capture_form_heading"
                    android:textColor="@color/accent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/line_separator"
                    android:layout_gravity="center_horizontal"
                    android:singleLine="true"
                    android:background="@color/accent"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/account_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/account_text"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    />

                <Spinner
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.08"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/smart_citizen_text_color"
                    style="@style/AppTheme.DarkText"/>

                <TextView
                    android:id="@+id/surname_txt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/surname_text"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"/>

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/address_text"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/contact_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/contact_text"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"/>

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/email_text"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/bp_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/bp_text"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/bp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/portion_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/portion_text"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"/>

                <EditText
                    android:id="@+id/portion"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:inputType="text" />


                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/date_text"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"/>

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:editable="false"
                    android:inputType="date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/line_separator_two"
                    android:layout_gravity="center_horizontal"
                    android:singleLine="true"
                    android:background="@color/accent"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/meter_heading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:text="@string/second_heading"
                    android:textColor="@color/accent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:id="@+id/water_meter_reading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/water_meter_reading_text"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    />


                <EditText
                    android:id="@+id/water_reading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:singleLine="true"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/electricity_meter_reading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/electricity_meter_reading_text"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    />

                <EditText
                    android:id="@+id/electricity_reading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/smart_citizen_text_color"
                    android:singleLine="true"
                    android:inputType="number"/>


                <TextView
                    android:id="@+id/line_separator_third"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:singleLine="true"
                    android:background="@color/accent"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/picture_heading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:text="@string/third_heading"
                    android:textColor="@color/accent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"/>


                <TextView
                    android:id="@+id/line_separator_fourth"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:singleLine="true"
                    android:background="@color/accent"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/water_evidence"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/water_reading_evidence"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    />

                <LinearLayout
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_weight="0.1"
                    android:weightSum="1">
                    <Button
                        android:id="@+id/water_reading_evidence"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/water_evidence"
                        android:layout_weight="0.4"
                        android:layout_marginBottom="5dp"
                        style="?android:textAppearanceSmall"
                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imgWaterProof"
                        android:layout_weight="0.2"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/electric_reading"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:text="@string/electricity_reading_evidence"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    />

                <LinearLayout
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_weight="0.1"
                    android:weightSum="1">
                    <Button
                        android:id="@+id/electricity_reading_evidence"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/electricity_evidence"
                        android:layout_weight="0.4"
                        android:layout_marginBottom="5dp"
                        style="?android:textAppearanceSmall"
                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imgElectricityProof"
                        android:layout_weight="0.2"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/submit_readings"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
                    android:text="@string/submit_reading"
                    android:textColor="@color/white"
                    android:background="@color/light_blue_600"
                    android:layout_marginBottom="5dp"
                    style="?android:textAppearanceSmall"
                    />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


